# telegram

./: .gitignore  ADICIONAR_AO_DOCKER_COMPOSE.yml  ARQUIVOS_ESSENCIAIS_VPS.md  ARQUIVOS_PARA_GITHUB.md  COMANDOS_VPS.txt  COMANDOS_VPS_EXATOS.txt  COMO_ENVIAR_GITHUB.md  COMO_USAR_TRANSCREVER.md  Dockerfile.telegram  ENDPOINT_TRANSCREVER.md  FLUXO_DIARIO_COMPLETO.md  FLUXO_N8N_RESUMO.md  GUIA_FLUXO_N8N.md  GUIA_FLUXO_N8N_COMPLETO.md  GUIA_INSTALACAO_VPS.md  INSTALL.sh  INSTRUCOES_VPS.md  LIMPAR_VPS.sh  PROXIMO_PASSO_VPS.md  README.md  README_API.md  RESUMO_UPLOAD.md  api.py  app_gui.py  app_web.py  config.example.py  docker-compose-final.yml  docker-compose.addition.yml  endpoint_transcrever.py  endpoints_fluxo_diario.py  pyproject.toml  railway.json  requirements.txt  telegram_client.py
templates/: index.html
